2005-10-11 Duncan Coutts <duncan@coutts.uklinux.net>

	* Makefile.am: delete the .precomp files in an ordinary "make clean"
	rather than "make distclean" since they are not so expensive to
	re-generate anymore and it seems to trip people up when they rebuild
	against different Gtk+ versions.

	* acinclude.m4: deal with libz on glibc systems in the same way as the
	pthread issue, ie don't directly link to it since it breaks ghci.

	* gtk/Graphics/UI/Gtk/Cairo.chs.pp: don't import Control.Monad.Reader
	unnecessarily (which otherwise causes a linker error when
	defined(ENABLE_CAIRO) && !GTK_CHECK_VERSION(2,8,0))

	* Makefile.am: build the cairo demo.

	* gtk/Graphics/UI/Gtk/Abstract/Widget.chs.pp: for onMotionNotify in
	the 'hint' mode we must enable the PointerMotionMask event as well as
	the PointerMotionHintMask or we will not recieve any motion events.

	* glib/System/Glib/hsgclosure.c, glib/System/Glib/hsgclosure.h,
	glib/System/Glib/Signals.chs.pp: cope with signal handlers that
	provide a non-null return GValue but with an invalid type by ignoring
	them (which is what the python version does too). This fixes the Entry
	onEntryActivate signal and probably others. Also improve the debugging
	and error checking code and rename the C functions to use the gtk2hs
	namespace/prefix.

	* glib/System/Glib/MainLoop.chs.pp: new module with glib main loop
	functions ike the timout and idle functions and the priority
	constants. Also add inputAdd for arranging callbacks upon activity on
	a file descriptor.

	* gtk/Graphics/UI/Gtk/General/Structs.hsc: remove priority constants.

	* gtk/Graphics/UI/Gtk/General/General.chs: remove timeout and idle
	callback functions and import them from System.Glib.MainLoop instead.

	* Makefile.am: add MainLoop.chs.pp to glib SOURCES.

2005-09-25 Axel Simon <A.Simon@kent.ac.uk>

	* glade/Glade.chs: Fixed a comment reported by Marco Tulio Gontijo
	e Silva.

	* gtk/Graphics/UI/Gtk.hs: Only import Cairo stuff if Cairo is
	present.
